WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
292338
[JSC] `ModuleProgramExecutable::create` exception check
https://bugs.webkit.org/show_bug.cgi?id=292338
Summary
[JSC] `ModuleProgramExecutable::create` exception check
Dylan Conway
Reported
2025-04-30 11:24:05 PDT
A large enough bigint literal can throw an exception during bytecode generation
Attachments
Add attachment
proposed patch, testcase, etc.
Dylan Conway
Comment 1
2025-04-30 11:29:37 PDT
Pull request:
https://github.com/webkit/webkit/pull/44754
EWS
Comment 2
2025-05-06 14:44:18 PDT
Committed
294578@main
(0582309eda99): <
https://commits.webkit.org/294578@main
> Reviewed commits have been landed. Closing PR #44754 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-05-06 14:45:30 PDT
<
rdar://problem/150797221
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug