[JSC] `ModuleProgramExecutable::create` exception check https://bugs.webkit.org/show_bug.cgi?id=292338

Reviewed by Yusuke Suzuki.

Importing a large enough bigint literal can throw during
bytecode generation (I think strings too). A check is
needed.

* JSTests/stress/bigint-oom-import.js: Added.
(shouldThrowAsync):
* JSTests/stress/import-tests/bigint-oom.js: Added.
* Source/JavaScriptCore/runtime/JSModuleRecord.cpp:
(JSC::JSModuleRecord::link):
* Source/JavaScriptCore/runtime/ModuleProgramExecutable.cpp:
(JSC::ModuleProgramExecutable::create):

Canonical link: https://commits.webkit.org/294578@main